Fixed spacing error for the social network buttons in the footer

--- a/startbootstrap-landing-page-gh-pages/css/landing-page.css
+++ b/startbootstrap-landing-page-gh-pages/css/landing-page.css
@@ -168,7 +168,7 @@ h6 {
 }
 
 .modal-header {
-    padding-top: 50px;
+    padding-top: 35px;
 }
 
 .modal-header .close {
@@ -241,6 +241,10 @@ h6 {
 
 .portfolio-item h4 {
     padding: 8px 0;
+}
+
+.content-section-b .container {
+    padding-bottom: 10px;
 }
 
 .portfolio-link:hover{
@@ -379,6 +383,14 @@ h6 {
 .banner-social-buttons {
     float: right;
     margin-top: 0;
+}
+
+.contactButtons {
+    padding-bottom: 50px;
+}
+
+.social-buttons {
+    padding-bottom: 30px;
 }
 
 @media(max-width:1199px) {
